# PackwizWrapper

./: .gitignore  .packwizignore  PLAN.md  index.toml  pack.toml  pyproject.toml
envious-mc/: elm.conf  elm.sh  install.sh  mods.txt  packmanager.conf  packmanager.sh  packmanager.sh.bak
scripts/: PRISM_SETUP.md  prism-update.bat  prism-update.sh
src/elm/: __init__.py  __main__.py  app.py  cli.py  config.py  menu.py  packwiz.py  pelican.py  ui.py  updater.py
src/elm/commands/: __init__.py  config_cmd.py  deploy.py  deps.py  key.py  mod.py  pack.py  target.py
src/elm/core/: __init__.py  curseforge.py  modrinth.py  packwiz.py  pelican.py  resolver.py
